--- a/MarkdownFile/14.批量归一化.md
+++ b/MarkdownFile/14.批量归一化.md
@@ -42,7 +42,7 @@
 
 **批量归一化**：将不同层的不同位置的小批量（mini-batch）输出的**均值**和**方差**固定，均值和方差的计算方法如下图所示
 
-![image-20240929151514485](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151514485.png)
+![alt text](images/image-20240929151514485.png)
 
 - **B**：小批量
 
@@ -54,7 +54,7 @@
 
 在这个基础上做额外的调整如下图所示
 
-![image-20240929151552791](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151552791.png)
+![alt text](images/image-20240929151552791.png)
 
 - 给定一个来自小批量的输入xi，批量归一化对里面的每一个样本减去均值除以标准差，再乘以γ，最后再加上β
 
@@ -70,19 +70,19 @@
 
 1. 计算均值和方差：
 
-   ![image-20240929151606778](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151606778.png)
+![alt text](images/image-20240929151606778.png)
 
 2. 归一化：
 
-   ![image-20240929151618148](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151618148.png)
+  ![alt text](images/image-20240929151618148.png)
 
    其中，ϵ是一个小常数，用于防止除以零。
 
 3. 缩放和平移：
 
-   ![image-20240929151629693](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151629693.png)
+![alt text](images/image-20240929151629693.png)
 
-   ![image-20240929151640368](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151640368.png)
+![alt text](images/image-20240929151640368.png)
 
 ## 四、原理
 
@@ -114,7 +114,7 @@
 
 批量归一化层通常置于全连接层中的**仿射变换和激活函数之间**
 
-![image-20240929151720535](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151720535.png)
+![alt text](images/image-20240929151720535.png)
 
 - **x**：全连接层的输入
 - **W**：权重参数
@@ -129,19 +129,19 @@
 对于卷积层，可以在卷积层之后和非线性激活函数之前应用批量归一化
 
 - 当卷积有多个输出通道时，需要对这些通道的“每个”输出执行批量归一化，每个通道都有自己的**拉伸参数**和**偏移参数**，并且都是**标量**
-- 当作用在卷积层上时，实际上是作用在**通道维**，特别是对于1 * 1的卷积来说，它等价于一个全连接层（对于一个像素来说，它的通道数可以认为是一个N维的向量（N等于通道数），作为它的一种特征；对于输入来说，每一个像素就是一个样本），所以对于一个卷积层来说，假如输入是批量大小 * 高 * 宽 * 通道数的话，那么样本大小就是批量大小 * 高 * 宽，即批量中所有像素都是样本，对应的通道就是特征，所以1 * 1的卷积就是先拉成一个二维矩阵再做全连接。所以这里的意思是说将所有的像素当成样本来计算均值和方差，也就是只作用在通道维（`将通道维当成是卷积层的特征维`）
-- 假设小批量包含m个样本，并且对于每个通道，卷积的输出具有高度p和宽度q，那么对于卷积层，在每个输出通道的m * p * q个元素上同时执行每个批量归一化。所以在计算均值和方差的时候会收集**所有空间位置的值**，然后在给定通道内应用相同的均值和方差，以便在每个空间位置对值进行归一化
+- 当作用在卷积层上时，实际上是作用在**通道维**，特别是对于1 * 1的卷积来说，它等价于一个全连接层（对于一个像素来说，它的通道数可以认为是一个N维的向量（N等于通道数），作为它的一种特征；对于输入来说，每一个像素就是一个样本），所以对于一个卷积层来说，假如输入是批量大小* 高* 宽* 通道数的话，那么样本大小就是批量大小 * 高* 宽，即批量中所有像素都是样本，对应的通道就是特征，所以1* 1的卷积就是先拉成一个二维矩阵再做全连接。所以这里的意思是说将所有的像素当成样本来计算均值和方差，也就是只作用在通道维（`将通道维当成是卷积层的特征维`）
+- 假设小批量包含m个样本，并且对于每个通道，卷积的输出具有高度p和宽度q，那么对于卷积层，在每个输出通道的m *p* q个元素上同时执行每个批量归一化。所以在计算均值和方差的时候会收集**所有空间位置的值**，然后在给定通道内应用相同的均值和方差，以便在每个空间位置对值进行归一化
 
 ## 七、论文解读
 
 最初在论文中提出它的时候是为了减少**内部协变量转移**（internal covariateshift，简单来说就是变量值的分布在训练过程中会发生变化），但是这种解释存在两个问题：
 
 - 这种偏移与严格定义的协变量偏移（internal covariate shift）非常不同，所以名字用词不当
--  这种解释只提供了一种不明确的直觉，但是留下了一个有待后续挖掘的问题：为什么这项技术如此有效？
+- 这种解释只提供了一种不明确的直觉，但是留下了一个有待后续挖掘的问题：为什么这项技术如此有效？
 
-后续论文发现它并没有减少内部协变量的转移，并且指出它可能是通过在每个小批量中加入**噪音**来控制模型的复杂度（虽然 μB 和 σB 是由数据得来的，但是每次选取小批量的时候是随机选取的，所以这里的均值和标准差也是随机的，-：随机偏移，/：随机缩放，这里的噪声是比较大的；β和γ因为是学习来的，学习率是一个固定的数，所以变化不会特别剧烈，变化的程度取决于学习率）
+后续论文发现它并没有减少内部协变量的转移，并且指出它可能是通过在每个小批量中加入**噪音**来控制模型的复杂度（虽然 μB 和 σB 是由数据得来的，但是每次选取小批量的时候是随机选取的，所以这里的均值和标准差也是随机的，-：随机偏移，/：随机缩放，这里的噪声是比较大的；β和γ因为是学习来的，学习率是一个固定的数，所以变化不会特别剧烈，变化的程度取决于学习率）  
 
-![image-20240929151751300](C:\Users\付\AppData\Roaming\Typora\typora-user-images\image-20240929151751300.png)
+![alt text](images/image-20240929151751300.png)
 
 - 如果说将批量归一化看成是一个控制模型复杂度的方法的话，是没有必要和**丢弃法**（dropout）混合使用的
 
@@ -282,8 +282,6 @@ net = nn.Sequential(
 
 全连接层：使用nn.Linear定义，有120、84和10个输出神经元。
 
- 
-
 注意事项
 
 设备一致性：在BatchNorm类的forward方法中，如果moving_mean和moving_var不在与输入数据相同的设备上，需要将它们复制到输入数据的设备上。
@@ -291,8 +289,6 @@ net = nn.Sequential(
 动量：在更新移动平均时，使用momentum参数来平滑更新。
 
 初始化：gamma初始化为1，beta初始化为0，moving_mean初始化为0，moving_var初始化为1。
-
-
 
 “底层发生变化”通常指的是神经网络中靠近输入层的底层权重或参数的更新。这些底层负责学习数据的低级特征，如边缘、纹理和形状。由于这些特征是构建更复杂特征的基础，因此它们对于整个网络的性能至关重要。
 
